# minion

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
minion/: cli.py  config.py
minion/agent/: agent.py  session.py
minion/llm/: embeddings.py  providers.py
minion/memory/: history.py  manager.py  models.py  store.py
minion/tools/: delegate.py  filesystem.py  git.py  search.py  shell.py
minion/tui/: app.py  app.tcss  widgets.py
tests/: test_memory.py  test_tools.py
