[project]
name = "minion"
version = "0.1.0"
description = "A local-first personal AI assistant for your terminal"
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai>=2.12.0",
    "pydantic-settings>=2.0",
    "textual>=0.80.0",
    "duckduckgo-search>=6.0",
    "httpx>=0.27",
]

[project.scripts]
minion = "minion.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["minion"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
